misc: switch from swagger to openapi

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,8 +1,8 @@
 {
 	"tasks": {
-		"build": "deno task generate:swagger && deno task generate:npm-package",
+		"build": "deno task generate:openapi && deno task generate:npm-package",
 		"generate:npm-package": "deno run -A scripts/build_npm.ts",
-		"generate:swagger": "npx -y swagger-typescript-api -p https://swagger.getlago.com/swagger.yaml -o ./swagger -n client.ts",
+		"generate:openapi": "npx -y swagger-typescript-api@latest -p https://swagger.getlago.com/openapi.yaml -o ./openapi -n client.ts",
 		"test": "deno test ./tests --parallel"
 	}
 }
